resources/manifes/cloud-notificación-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-notificacion-service
spec:
  selector:
    app: notificacion-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
